Fix size of book container when the book title is too long

--- a/public/index.styl
+++ b/public/index.styl
@@ -14,6 +14,11 @@ minCoverHeight = 11em
 			width 8em
 			min-height 12em
 
+			> p
+				max-height 8em
+				overflow hidden
+				font-size 0.9em
+
 		.cover
 			position relative
 			box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.4)
@@ -38,6 +43,8 @@ minCoverHeight = 11em
 
 			.title
 				color rgb(50, 50 50)
+				max-height 8em
+				overflow hidden
 
 			img
 				width 100%
